styling: pick server: bottom border for prettier multi-line servers

--- a/clients/mobileui/style.less
+++ b/clients/mobileui/style.less
@@ -763,6 +763,8 @@ html[xmlns] .cf {
   .url;
   background-color: #ddddff;
   border-right: 1px solid #aaaacc;
+  margin-bottom: -1px;
+  border-bottom: 1px solid #aaaacc;
   padding: 10px 12px 10px 8px;
 }
 
