add server icons for the server picker

--- a/clients/mobileui/style.less
+++ b/clients/mobileui/style.less
@@ -756,6 +756,13 @@ html[xmlns] .cf {
   border-bottom: 1px solid #888;
 }
 
+.ps-serverIcon {
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+  vertical-align: middle;
+}
+
 .ps-serverUrl {
   display: inline-block;
   min-width: 12em;
@@ -1385,6 +1392,7 @@ html[xmlns] .cf {
 .gcd-pic {
   width: 24px;
   height: 24px;
+  vertical-align: middle;
 }
 
 ///// Messages (From our user and other peeps)
@@ -1489,6 +1497,10 @@ html[xmlns] .cf {
 .gcd-join {
   width: 100%;
   text-align: center;
+  vertical-align: middle;
+}
+.gcd-join + .gcd-join {
+  margin-top: 4px;
 }
 .gcd-inviter, .gcd-invitee {
   font-weight: bold;
