--- a/clients/mobileui/style.less
+++ b/clients/mobileui/style.less
@@ -19,8 +19,13 @@ body {
     -webkit-overflow-scrolling: touch;
 }
 
-.hidden,
-button.hidden {
+button,
+input,
+textarea {
+    font-family: "Helvetica", arial, sans-serif;
+}
+
+.hidden {
   display: none;
 }
 
@@ -32,8 +37,7 @@ button.hidden {
   visibility: hidden;
 }
 
-.invisible,
-button.invisible {
+.invisible {
   visibility: hidden;
 }
 
@@ -41,11 +45,6 @@ button.invisible {
   background-color: #fee;
 }
 
-button,
-input,
-textarea {
-    font-family: "Helvetica", arial, sans-serif;
-}
 
 button {
     cursor: pointer;
@@ -69,11 +68,11 @@ a {
 }
 
 .overflow {
-    overflow: hidden;
-    white-space: nowrap;
+  overflow: hidden;
+  white-space: nowrap;
 
-    -o-text-overflow: ellipsis;
-       text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
 }
 
 .url() {
@@ -81,12 +80,12 @@ a {
 }
 
 .lipVertGradient (@topLip, @top, @bottom) {
-  background: -moz-linear-gradient(top, @topLip 0, @topLip 1px, @top 1px, @bottom 100%);
+  background: -moz-linear-gradient(to bottom, @topLip 0, @topLip 1px, @top 1px, @bottom 100%);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, @topLip), color-stop(1%, @topLip), color-stop(1%, @top), color-stop(100%, @bottom));
 }
 
 .smoothVertGradient (@top, @bottom) {
-  background: -moz-linear-gradient(top, @top 0, @bottom 100%);
+  background: -moz-linear-gradient(to bottom, @top 0%, @bottom 100%);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, @top), color-stop(100%, @bottom));
 }
 
@@ -193,10 +192,10 @@ input[type=text]#search {
     background-color: #222;
     z-index: 99;
 
-    -webkit-box-shadow: 0 1px 0 #7A7A7A inset, 0 -1px 0 #000 inset, 0 3px 0 rgba(150, 150, 150, 0.25);
-       -moz-box-shadow: 0 1px 0 #7A7A7A inset, 0 -1px 0 #000 inset, 0 3px 0 rgba(150, 150, 150, 0.25);
-         -o-box-shadow: 0 1px 0 #7A7A7A inset, 0 -1px 0 #000 inset, 0 3px 0 rgba(150, 150, 150, 0.25);
-            box-shadow: 0 1px 0 #7A7A7A inset, 0 -1px 0 #000 inset, 0 3px 0 rgba(150, 150, 150, 0.25);
+    -webkit-box-shadow: 0 1px 0 #7A7A7A inset, 0 -1px 0 #000 inset, 0 0px 0 rgba(150, 150, 150, 0.25);
+       -moz-box-shadow: 0 1px 0 #7A7A7A inset, 0 -1px 0 #000 inset, 0 0px 0 rgba(150, 150, 150, 0.25);
+         -o-box-shadow: 0 1px 0 #7A7A7A inset, 0 -1px 0 #000 inset, 0 0px 0 rgba(150, 150, 150, 0.25);
+            box-shadow: 0 1px 0 #7A7A7A inset, 0 -1px 0 #000 inset, 0 0px 0 rgba(150, 150, 150, 0.25);
 
     background-image: -webkit-gradient(
                             linear,
@@ -215,43 +214,53 @@ input[type=text]#search {
                                            #1A1A1A 100%);
 }
 
-.THEheader button {
-    max-height: 24px;
-    line-height: 24px;
-    font-size: 11px;
-    font-weight: bold;
-    color: #fff;
-    text-shadow: 0 -1px 0 #333;
-    padding: 0 5px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #222 #000 #000;
+.THEback, .THEnext {
+  max-height: 24px;
+  line-height: 24px;
+  font-size: 11px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0 -1px 0 #333;
+  padding: 0 5px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #222 #000 #000;
 
-    -webkit-border-radius: 3px;
-       -moz-border-radius: 3px;
-         -o-border-radius: 3px;
-            border-radius: 3px;
+  -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+       -o-border-radius: 3px;
+          border-radius: 3px;
 
-    -webkit-box-shadow: 0 1px 0 #444, 0 1px 0 #666 inset;
-       -moz-box-shadow: 0 1px 0 #444, 0 1px 0 #666 inset;
-         -o-box-shadow: 0 1px 0 #444, 0 1px 0 #666 inset;
-            box-shadow: 0 1px 0 #444, 0 1px 0 #666 inset;
+  -webkit-box-shadow: 0 1px 0 #444, 0 1px 0 #666 inset;
+     -moz-box-shadow: 0 1px 0 #444, 0 1px 0 #666 inset;
+       -o-box-shadow: 0 1px 0 #444, 0 1px 0 #666 inset;
+          box-shadow: 0 1px 0 #444, 0 1px 0 #666 inset;
 
-    background-image: -webkit-gradient(
-                            linear,
-                            left top,
-                            left bottom,
-                            color-stop(0%, #828282),
-                            color-stop(50%, #565656),
-                            color-stop(50%, #4D4C4C),
-                            color-stop(100%, #1F1F1F)
-                      );
+  background-image: -webkit-gradient(
+                          linear,
+                          left top,
+                          left bottom,
+                          color-stop(0%, #828282),
+                          color-stop(50%, #565656),
+                          color-stop(50%, #4D4C4C),
+                          color-stop(100%, #1F1F1F)
+                    );
 
-    background-image: -moz-linear-gradient(center top,
-                                           #828282 0%,
-                                           #565656 50%,
-                                           #4D4C4C 50%,
-                                           #1F1F1F 100%);
+  background-image: -moz-linear-gradient(center top,
+                                         #828282 0%,
+                                         #565656 50%,
+                                         #4D4C4C 50%,
+                                         #1F1F1F 100%);
+}
+.THEback {
+  position: absolute;
+  top: 4px;
+  left: 0;
+}
+.THEnext {
+  position: absolute;
+  right: 0;
+  top: 4px;
 }
 
 .THEheaderText {
@@ -1520,6 +1529,40 @@ html[xmlns] .cf {
 
 ////////////////////////////////////////////////////////////////////////////////
 // Group Conversations: Select people to add to a conversation (pickPeeps) [gca]
+
+@gca-selectedBorder: #f8ca00;
+@gca-selectedFill: lighten(@gca-selectedBorder, 30%);
+.gca-peep {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  width: 44%;
+  border: 2px solid transparent;
+  border-radius: 4px;
+  padding: 4px;
+  margin: 2px;
+  min-height: 48px;
+}
+.gca-peep[selected="true"] {
+  border: 2px solid @gca-selectedBorder;
+  background-color: @gca-selectedFill;
+}
+
+.gca-pic {
+  .common-pic;
+  display: block;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  margin-right: 4px;
+}
+.gca-nameBox {
+  margin-left: 54px;
+}
+
+.gca-name {
+  color: black;
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 // LIMBO: User Info: detailed info on a user
