styling: compose widgets

--- a/clients/mobileui/style.less
+++ b/clients/mobileui/style.less
@@ -427,6 +427,21 @@ input[type=text]#search {
 }
 
 
+////////////////////////////////////////////////////////////////////////////////
+// Recurring widgets
+
+.widget-compose {
+  padding: 5px;
+}
+
+.widget-composeText {
+  width: 350px;
+  margin-left: 5px;
+}
+
+.widget-composeSend {
+  width: 75px;
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 // Various mix-in blah
@@ -1471,7 +1486,7 @@ html[xmlns] .cf {
   padding: 4px;
 }
 .gcn-compose {
-  padding: 6px 4px;
+  padding: 6px 4px 6px 8px;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
